...
            android:textAlignment="center"
            android:textColor="@color/darkText"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/click_animation"
...
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/click_animation"
        android:clickable="true"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:ignore="KeyboardInaccessibleWidget">

        <ImageView
            android:id="@+id/imageView6"
...
