<resources>
    <string name="app_name">CoursePicker</string>


    <string name="action_favourite">Add</string>
    <string name="action_settings">Advanced</string>

    <!-- Strings related to login -->
    <string name="prompt_id">ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_courses">CoursesActivity</string>
    <string name="Add">Add</string>
    <string name="Drop">Drop</string>
    <string-array name="term">
        <item>-- All --</item>
        <item>Fall</item>
        <item>Winter</item>
    </string-array>
</resources>
